[v9r3-pre15]
use DIRAC v6r21-pre5

* compile LHCbWeb
* reporting output code
* log
* Update make_release.rst
* removed unused
* autopep8 and more
* format test
* Update make_release.rst
* Update make_release.rst
* Update make_release.rst
* Update make_release.rst. add release for cvmfs-lhcbdev

[v9r3-pre14]
use DIRAC v6r21-pre3

* use tempfile to get temporary directory
* remove error log before raise
* shuffle is in place
* Simplify logic
* Shuffle AssociatedSEs in all cases
* moved and corrected one test
* style
* removed BkInputDataAgent optimizer (disabled since long time)

[v9r3-pre13]
use DIRAC v6r21-pre3

* fixed LogSE
* LogUpload: dynamically generate the log https URL
* failing test when deprecated method is called
* passing an env may be necessary
* lb-run from LbEnv should create fully isolated environment
* passing in the environment
* bug fix @@
* corrected PYTHONPATH
* bug fix
* CMT -> binary tag
* added ReplaceLHCbDIRACCode command
* sourcing in current process environment
* finding LbLogin environment
* failing if needs to fail
* just style
* env can be None
* getting env from lhcbdirac bashrc
* use LbEnv for tests

[v9r3-pre12]
use DIRAC v6r20p25

* allowing more than 1 type of simulation productions

[v9r3-pre11]
use DIRAC v6r20p23

* fix index name
* using the production ID as index name

[v9r3-pre10]
use DIRAC v6r20p22

* using not strings but dicts
* no need for json
* dict no string
* sending a dict, and corrected typeName
* handle case of non existing index
* moved to pytest
* moved to pytest
* return value
* bug fixes
* Fixes for index name
* minor bug fix
* using old version
* just debug
* fix
* setting correctly the binary tag

[v9r3-pre9]
use DIRAC v6r20p22

* fix typos
* restored tests
* fixes
* pip install LbPlatformUtils
* adding functions from base module
* getQueues from vanilla DIRAC module

[v9r2p13]
use DIRAC v6r20p26

* fixed LogSE
* LogUpload: dynamically generate the log https URL

[v9r2p12]
use DIRAC v6r20p25
