@@ -7,6 +7,13 @@ Sources
 
 Releases
 {
+  v9r3-pre16
+  {
+    Modules = LHCbDIRAC:v9r3-pre16, LHCbWebDIRAC:v4r5p2
+    Depends = DIRAC:v6r21-pre6
+    LcgVer = v14r6
+  }
+
   v9r3-pre15
   {
     Modules = LHCbDIRAC:v9r3-pre15, LHCbWebDIRAC:v4r5p1
